--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "^14.2.15",
     "framer-motion": "^12.12.2",
+    "lottie-react": "^2.4.1",
     "next": "15.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
